--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,25 @@
             <artifactId>instagram4j</artifactId>
             <version>1.14</version>
         </dependency>
+
+
+
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.instagram4j/instagram4j -->
+        <dependency>
+            <groupId>com.github.instagram4j</groupId>
+            <artifactId>instagram4j</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
