--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/insta
+#spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL:postgresql://localhost:5432/insta}
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto = update
+
+#server.port=${PORT:8080}
