--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/insta
-#spring.datasource.url=jdbc:${CLEARDB_DATABASE_URL:postgresql://localhost:5432/insta}
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/insta
+#spring.datasource.username=root
+#spring.datasource.password=root
+# server.port=8080
+
 spring.jpa.hibernate.ddl-auto = update
 
-#server.port=${PORT:8080}
-server.port=${PORT:8080}
+
+
+
+
+spring.datasource.url=jdbc:postgresql://aa1r6gis40nzh1q.c6xas7wmwt9v.eu-west-3.rds.amazonaws.com:5432/insta_aws
+spring.datasource.username=root
+spring.datasource.password=pass4root
+server.port=5000
