--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/insta
-#spring.datasource.username=root
-#spring.datasource.password=root
-# server.port=8080
-
-spring.jpa.hibernate.ddl-auto = update
-
-
-
-
-
-spring.datasource.url=jdbc:postgresql://aa1r6gis40nzh1q.c6xas7wmwt9v.eu-west-3.rds.amazonaws.com:5432/insta_aws
+spring.datasource.url=jdbc:postgresql://localhost:5432/new
 spring.datasource.username=root
-spring.datasource.password=pass4root
-server.port=5000
+spring.datasource.password=root
+server.port=8080
+
+spring.jpa.hibernate.ddl-auto = none
+
+
+
+
+
+#spring.datasource.url=jdbc:postgresql://aa1r6gis40nzh1q.c6xas7wmwt9v.eu-west-3.rds.amazonaws.com:5432/insta_aws
+#spring.datasource.username=root
+#spring.datasource.password=pass4root
+#server.port=5000
