--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,17 @@
             <version>2.0.6</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.apache.logging.log4j</groupId>-->
+<!--            <artifactId>log4j-api</artifactId>-->
+<!--            <version>2.12.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.logging.log4j</groupId>-->
+<!--            <artifactId>log4j-core</artifactId>-->
+<!--            <version>2.12.0</version>-->
+<!--        </dependency>-->
+
 
 <!--        &lt;!&ndash; https://mvnrepository.com/artifact/pl.pragmatists/JUnitParams &ndash;&gt;-->
 <!--        <dependency>-->
