--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,15 @@ server.port=8080
 
 spring.jpa.hibernate.ddl-auto = none
 
-
-
-
-
 #spring.datasource.url=jdbc:postgresql://aa1r6gis40nzh1q.c6xas7wmwt9v.eu-west-3.rds.amazonaws.com:5432/insta_aws
 #spring.datasource.username=root
 #spring.datasource.password=pass4root
 #server.port=5000
+
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.file.name=logs/backend.log
+logging.pattern.file=%d{yyyy.MM.dd HH:mm:ss.SSS} %-5level [%thread] - %msg%n
+
+#logging.pattern.file=%d{yyyy.MM.dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+
